--- a/main_file.tex
+++ b/main_file.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,a4paper,svgnames]{book}
 
 \input{usepackage.tex}
-\allowdisplaybreaks
+\allowdisplaybreaks[4]
  \renewcommand{\baselinestretch}{1.2} 
 \usepackage{fancyhdr}
 \fancyhead{}
