--- a/newcommand.tex
+++ b/newcommand.tex
@@ -48,3 +48,8 @@ distance=3cm,inner sep=2pt}}
 
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 \newcolumntype{P}[1]{>{$}M{#1}<{$}}
+
+%%%%%%%%%%%%%%%%%TIKZ STYLE%%%%%%%%%%%
+    \tikzstyle{tree}=[circle,draw=gray!70!,minimum width=0.7cm]
+    \tikzstyle{leaf}=[circle,draw,minimum width=0.7cm]
+    \tikzstyle{sol}=[rectangle,draw,very thick,minimum width=0.6cm,minimum height=0.6cm]
