--- a/part1/ordo.tex
+++ b/part1/ordo.tex
@@ -1,4 +1,5 @@
 \section{Ordonnancement et contraintes de ressources}
+\label{sec:ordo}
 \subsection{L'ordonnancement}
 
 La théorie de l'ordonnancement s'intéresse au calcul de dates
