--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -1,6 +1,6 @@
 
 \subsection{Contraintes de ressources}
-
+\label{sec:ordo_res}
 Dans ce manuscrit, nous nous intéressons  principalement  aux problèmes
 d'ordonnancement cumulatifs. Parmi ces derniers, deux des plus
 étudiés sont le problème d'ordonnancement de projet à contraintes de
