--- a/part2/CECSP/PPC_CECSP.tex
+++ b/part2/CECSP/PPC_CECSP.tex
@@ -1,5 +1,5 @@
 \chapter{Algorithmes issus de la programmation par contraintes}
-
+\label{sec:PPC_CECSP}
 Dans ce chapitre, nous décrivons des algorithmes et modèles issus de
 la programmtion par contrainte. Les deux premières sections sont
 dédiées à la présentation d'algorithmes de filtrage pour le problème
