--- a/part3/CECSP/PLNE_CECSP.tex
+++ b/part3/CECSP/PLNE_CECSP.tex
@@ -1,4 +1,4 @@
-\chapter[Modèles pour le \CECSP~et renforcement des modèles]{Programmtion linéaire pour le \CECSP~et renforcement des modèles}
+\chapter[Modèles pour le \CECSP~et renforcement des modèles]{Programmation linéaire pour le \CECSP~et renforcement des modèles}
 
 
 
@@ -7,7 +7,8 @@
 \input{part3/CECSP/modele_CECSP.tex}
 
 Dans la partie suivante, nous allons montrer comment améliorer ces
-modèles par le biais d'étude polyédrale et d'inégalités valides.
+modèles par le biais d'une étude polyédrale et la proposition
+d'inégalités valides.
 
 \input{part3/CECSP/amelioration_modele.tex}
 
