--- a/usepackage.tex
+++ b/usepackage.tex
@@ -11,7 +11,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{tikz}
-\usetikzlibrary{patterns,shapes}
+\usetikzlibrary{patterns,shapes,positioning,shapes.misc}
 \usepackage{array}
 \usepackage{xargs}
 \usepackage{multirow}
