--- a/part3/RCPSP/PLNE_RCPSP.tex
+++ b/part3/RCPSP/PLNE_RCPSP.tex
@@ -3,11 +3,13 @@
 
 \input{part3/RCPSP/PL.tex}
 
-La section suivante est dédiée aux modèles de programmation linéaire
+Le paragraphe suivant est dédié aux modèles de programmation linéaire
 mis en place pour le problème d'ordonnancement de projet sous
 contraintes de ressource. 
 
 \input{part3/RCPSP/modele_RCPSP.tex}
+~
 
-La partie suivante est consacrée à la présentation des modèles de
+
+Le chapitre suivant est consacré à la présentation des modèles de
 programmation linéaire mixtes pour le \CECSP.
